# Habana_Custom_Kernel

./: CMakeLists.txt
synapse/: CMakeLists.txt  main.cpp
